add img and delete min css

--- a/portfolio/portfolio_2018/css/portfolio_main.css
+++ b/portfolio/portfolio_2018/css/portfolio_main.css
@@ -230,6 +230,11 @@ figure{
   color:#339D8B;
 }
 
+.overview-accent-color-three{
+  color:#D69D53;
+}
+
+
 .overview-section{
   padding-top:1rem;
   padding-bottom:1rem;
