--- a/portfolio/jhw_portfolio/css/portfolio_main.css
+++ b/portfolio/jhw_portfolio/css/portfolio_main.css
@@ -38,7 +38,7 @@ h1{
   text-align:center;
 }
 
-#intro-emphasis{
+.intro-emphasis{
   font-weight:bold;
   font-style:normal;
 }
@@ -526,6 +526,10 @@ nav li {
 
 .border-highlight-three:before, .border-highlight-three:after {
   border-color: #B35F5E;
+}
+
+.border-highlight-four:before, .border-highlight-four:after {
+  border-color: #65B2C6;
 }
 
 .project-overlay{
