--- a/portfolio/jhw_portfolio/css/portfolio_main.css
+++ b/portfolio/jhw_portfolio/css/portfolio_main.css
@@ -144,6 +144,21 @@ p{
   margin:1rem auto;
 }
 
+.paragraph-in-text{
+  display:block;
+  color:#65B2C6;
+  font-family: 'Amiri', serif;
+  font-size:1.4rem;
+  line-height: 1.7rem;
+  margin:1rem auto;
+
+  -webkit-transition: color 0.2s ease-in;
+  transition:  color 0.2s ease-in;
+}
+
+.paragraph-in-text:hover, .paragraph-in-text:focus{
+  color:rgba(0,0,0,.84);
+}
 
 .in-para-overview-title{
   margin:1rem auto;
@@ -248,14 +263,14 @@ figure{
 /*for footer nav link*/
 a{
   text-decoration: none;
-  color:#3C3C3C;
+  color:#65B2C6;
   -webkit-transition: color 0.3s ease-in;
   transition: color 0.3s ease-in;
 }
 
 a:hover {
   text-decoration: none;
-  color:#B35F5E;
+  color:#3C3C3C ;
 }
 
 .nav-link:hover{
