--- a/portfolio/jhw_portfolio/css/portfolio_flexbox.css
+++ b/portfolio/jhw_portfolio/css/portfolio_flexbox.css
@@ -428,6 +428,7 @@ thru media queries at the end*/
 		width:100%;
 		margin:0.6rem auto;
 		padding-left:5rem;
+		padding-right:5rem;
 	}
 
 	#small-decoration{
