--- a/portfolio/jhw_portfolio/css/portfolio_main.css
+++ b/portfolio/jhw_portfolio/css/portfolio_main.css
@@ -167,8 +167,9 @@ p{
 }
 
 .in-para-overview-title{
-  margin:1rem auto;
-  padding-bottom:0.5rem;
+  margin:0.5rem auto;
+  padding-bottom:0;
+  padding-top:1.3rem;
   max-width:80%;
 }
 
